# algorithms

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  hash_map.c  hash_map.h  map.h  stack.c  stack.h  tree_map.c  tree_map.h
test/: config.h  hash_map.c  hash_map.h  stack.c  stack.h  test.c  tree_map.c  tree_map.h
